# FinTaxBE

./: .gitignore  .template.env  Dockerfile  ORD-ZU_v14-0E.xsl  Posredni_wspolne_v15-0E.xsl  cases.json  data.xml  data1.xml  db-docker-compose.yaml  docker-compose.yaml  pyproject.toml  styl.xsl
alembic/: README  env.py
alembic/versions/: 057f779a796e_add_turn_db_model.py  089a7ad8a9ee_add_turn_db_model.py  2185f8820227_update_turn_db_model.py  21b38fea83f4_update_turn_db_model.py  b3ead1504241_update_turn_db_model.py  d0bdc34c573e_update_turn_db_model.py  e567781384cc_update_turn_db_model.py  f782fe74e1ae_update_turn_db_model.py
hackyeah_2024_ad_deviniti/: tools.py
hackyeah_2024_ad_deviniti/application/: conversation_service.py  form_fill_process.py  intents.py  stats_collector.py
hackyeah_2024_ad_deviniti/application/ai_processor/: a_cel_deklaracji_extractor.py  a_date_extractor.py  a_podmiot_extractor.py  b_address_extraction.py  b_address_verification_extraction.py  b_identyfikator_podatkowy_extract.py  b_identyfikator_podatkowy_wartosc_extract.py  b_nip_extraction.py  b_rodzaj_podatnika.py  b_urzad_skarbowy_extraction_extraction.py  (+10 more)
hackyeah_2024_ad_deviniti/config/: config_models.py  database.py  llm_config.py
hackyeah_2024_ad_deviniti/domain/: conversation_turn.py  conwersation_turn.py  pcc_3_form.py  user_action.py
hackyeah_2024_ad_deviniti/infrastructure/: llm_loaders.py
hackyeah_2024_ad_deviniti/pcc_renderer/: PccRenderer.py  output.html
hackyeah_2024_ad_deviniti/presentation/: dependency_injection.py  dto.py  server.py
scripts/: run_prod.sh
(+9 files in other folders)
