[tool.poetry]
name = "hackyeah-2024-ad-deviniti"
version = "0.1.0"
description = ""
authors = ["Marcin Wątroba <marcin.watroba@deviniti.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.0" }
typer = "^0.12.5"
pydantic = "^2.9.2"
poethepoet = "^0.29.0"
sqlmodel = "^0.0.22"
gitpython = "^3.1.43"
sse-starlette = "^2.1.3"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
wait-for-it = "^2.2.2"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"

[tool.poe.tasks]
dev = "fastapi dev hackyeah_2024_ad_deviniti/presentation/server.py --host 0.0.0.0"
prod = "fastapi run hackyeah_2024_ad_deviniti/presentation/server.py --host 0.0.0.0"
black_fix = "black hackyeah_2024_ad_deviniti"
isort_fix = "isort hackyeah_2024_ad_deviniti"
black = "black --check hackyeah_2024_ad_deviniti"
isort = "isort --check hackyeah_2024_ad_deviniti"
mypy = "mypy --strict hackyeah_2024_ad_deviniti"
docker_check = "hadolint Dockerfile"
docker_build_verify = ['black', 'isort', 'mypy']
mr = ['black_fix', 'isort_fix', 'black', 'isort', 'mypy', "docker_check"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
